# Ratio-CustomerAgent

./: .env.example  .gitignore  README.md  docker-compose.yml  pytest.ini  requirements.txt
Code/RATIO_MCP/: Dockerfile  README.md  pyproject.toml  requirements.txt
Code/RATIO_MCP/.aitk/: mcp.json
Code/RATIO_MCP/src/: server.py
Code/RATIO_MCP/src/SynonymGenerator/: OfferingSynonyms.py  RegionSynonyms.py  ServiceNameSynonyms.py
Code/RATIO_MCP/src/client/: __init__.py  mcp_client.py
Code/RATIO_MCP/src/config/: prompts_config.json  resources_config.json  tools_config.json
Code/RATIO_MCP/src/core/: __init__.py  api_routes.py  call_tracker.py  job_manager.py  mcp_app.py
Code/RATIO_MCP/src/datasets/: DatabaseSchema.txt  OfferingSynonyms.json  OutageDomainSchema.txt  RegionSynonyms.json  ServiceNameSynonyms.json  TableSchema.json
Code/RATIO_MCP/src/helper/: adls.py  auth.py  kusto_auth.py  lakehouse.py  llm.py  mcp_logger.py  normalize_entity_mapping.py
Code/RATIO_MCP/src/plugins/: __init__.py  normalize_entity.py
Code/RATIO_MCP/src/prompts/: airo_context.txt  airo_nrt_hourly_trend_prompt.txt  airod_analyst_prompt.txt  airod_analyst_prompt_backup.txt  auto_airo_prompt.txt  auto_customer_prompt.txt  auto_entity_extractor_prompt.txt  auto_outage_prompt.txt  auto_summary_prompt.txt  auto_visualization_prompt.txt  customer_insights_prompt.txt  customer_insights_prompt_backup.txt  entity_extractor_prompt.txt  entity_extractor_prompt_backup.txt  outage_analyst_prompt.txt  outage_analyst_prompt_backup.txt  outage_context.txt  planner_prompt.txt  sql_query_prompt.txt  (+6 more)
(+202 files in other folders)
